[package]
name = "rotn-save-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = [
    "image",
    "advanced",
    "tokio",
    "svg",
    "lazy",
] }
rfd = { version = "0.15.3" }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
chrono = "0.4"
rustc_version = "0.4"
